Restructured player change

--- a/source/dialogs/Makefile.am
+++ b/source/dialogs/Makefile.am
@@ -5,6 +5,6 @@ AM_CXXFLAGS             = $(SDL_CFLAGS) $(PARAGUI_CFLAGS)  $(SIGC_CFLAGS) -Dmain
 
 noinst_LTLIBRARIES      = libdialogs.la
 
-libdialogs_la_SOURCES   = editmapparam.cpp selectionwindow.cpp fileselector.cpp playersetup.cpp alliancesetup.cpp newgame.cpp soundsettings.cpp
+libdialogs_la_SOURCES   = editmapparam.cpp selectionwindow.cpp fileselector.cpp playersetup.cpp alliancesetup.cpp newgame.cpp soundsettings.cpp emailsetup.cpp
 libdialogs_la_LIBADD    = @SDL_LIBS@ 
 
