--- a/source/unix/asc/Makefile.am
+++ b/source/unix/asc/Makefile.am
@@ -26,7 +26,7 @@ gameevent_dialogs.cpp statisticdialog.cpp clipboard.cpp geometry.cpp weatherarea
 guidimension.cpp guiiconhandler.cpp guifunctions.cpp iconrepository.cpp gamedialog.cpp \
 infopopup.cpp overviewmapimage.cpp asc-mainscreen.cpp mapfield.cpp overviewmappanel.cpp \
 weathercast.cpp unitinfodialog.cpp messaginghub.cpp explosivemines.cpp  \
-legacynetworkloaders.cpp player.cpp cannedmessages.cpp
+legacynetworkloaders.cpp player.cpp cannedmessages.cpp reactionfire.cpp
 
 
 asc_LDADD   		= $(top_builddir)/source/libs/triangul/libtriangul.la \
