Fixed windows compilation problems

--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -268,6 +268,9 @@
 				RelativePath="..\..\..\loadpcxc.cpp">
 			</File>
 			<File
+				RelativePath="..\..\..\mainscreenwidget.cpp">
+			</File>
+			<File
 				RelativePath="..\..\..\mapalgorithms.cpp">
 			</File>
 			<File
@@ -275,6 +278,9 @@
 			</File>
 			<File
 				RelativePath="..\..\..\mapfield.cpp">
+			</File>
+			<File
+				RelativePath="..\..\..\mapimageexport.cpp">
 			</File>
 			<File
 				RelativePath="..\..\..\mappolygons.cpp">
