Fixed memory leak

--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -184,6 +184,9 @@
 				RelativePath="..\..\..\containerbasetype.cpp">
 			</File>
 			<File
+				RelativePath="..\..\..\containercontrols.cpp">
+			</File>
+			<File
 				RelativePath="..\..\..\controls.cpp">
 			</File>
 			<File
