--- a/source/unix/asc/Makefile.am
+++ b/source/unix/asc/Makefile.am
@@ -12,8 +12,8 @@ bin_PROGRAMS		= asc
 asc_SOURCES 		= unitctrl.cpp soundList.cpp typen.cpp \
 strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp sg.cpp pd.cpp palette.cpp \
 newfont.cpp network.cpp misc.cpp loadpcxc.cpp loaders.cpp \
-loadbi3.cpp gui.cpp gamedlg.cpp dlg_box.cpp dialog.cpp controls.cpp \
-building.cpp basestrm.cpp basegfx.cpp attack.cpp \
+loadbi3.cpp gamedlg.cpp dlg_box.cpp dialog.cpp controls.cpp \
+basestrm.cpp basegfx.cpp attack.cpp \
 gameoptions.cpp astar2.cpp vehicletype.cpp objects.cpp \
 buildingtype.cpp containerbase.cpp mapalgorithms.cpp viewcalculation.cpp \
 gamemap.cpp password.cpp password_dialog.cpp replay.cpp research.cpp \
