more paragui migration

--- a/source/dialogs/Makefile.am
+++ b/source/dialogs/Makefile.am
@@ -8,5 +8,5 @@ noinst_LTLIBRARIES      = libdialogs.la libgamedialogs.la
 libdialogs_la_SOURCES   = editmapparam.cpp selectionwindow.cpp fileselector.cpp playersetup.cpp alliancesetup.cpp newgame.cpp soundsettings.cpp emailsetup.cpp unitinfodialog.cpp 
 libdialogs_la_LIBADD    = @SDL_LIBS@ 
 
-libgamedialogs_la_SOURCES   = cargodialog.cpp
+libgamedialogs_la_SOURCES   = cargodialog.cpp vehicletypeselector.cpp unitcounting.cpp
 libgamedialogs_la_LIBADD    = @SDL_LIBS@ 
